--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 
   <script src="https://kit.fontawesome.com/bb73d41240.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
-  <script src="/scripts/sketch.js"></script>
+  <script src="./scripts/sketch.js"></script>
 
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
